--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # These individuals contributed to the hbnb project in this repository 
 
-Ezra Nobrega <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
+Sandra Phiri <fmthombothi@yahoo.com>
+Safu Mulatu  <>
