--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 # These individuals contributed to the hbnb project in this repository 
 
-Sandra Phiri <fmthombothi@yahoo.com>
-Safu Mulatu  <>
+Ezra Nobrega    <ezra.nobrega@outlook.com>
+Justin Majetich <justinmajetich@gmail.com>
+Sandra Phiri    <fmthombothi@yahoo.com>
